# Archipelago-lobby

./: .env  .gitattributes  .gitignore  .taskcluster.yml  Cargo.toml  README.md  build.rs  dc.sh  diesel.toml  docker-compose.yml  schema.diff  start.sh
ap-worker/: ap_tests.py  check_wq.py  checker.py  gen_wq.py  handler.py  options_gen_wq.py  pyproject.toml  self_check.py  wq.py
apdiff-viewer/: .env  .gitignore  .taskcluster.yml  Cargo.toml  LICENSE  build.rs
apdiff-viewer/frontend/: package.json  tsconfig.json  webpack.config.js
apdiff-viewer/frontend/src/: App.tsx  index.tsx
apdiff-viewer/migrations/2025-11-22-120000_create_fuzz_results/: down.sql  up.sql
apdiff-viewer/src/: apworld.rs  diff.rs  guards.rs  main.rs  schema.rs  tc.rs
apdiff-viewer/src/api/: mod.rs
apdiff-viewer/src/db/: mod.rs
apdiff-viewer/src/diff/: compute.rs  mod.rs  word_diff.rs
apdiff-viewer/static/: github-dark.tmTheme
apdiff-viewer/static/css/: main.css  main.css.map
apdiff-viewer/static/js/: diff2html-ui-slim.min.js
apdiff-viewer/static/sass/: main.sass
apdiff-viewer/taskcluster/: config.yml
apdiff-viewer/templates/: index-react.html  index.html  tests.html
apwm/: .taskcluster.yml  Cargo.toml  README.md
apwm/.github/workflows/: main.yml
apwm/src/: changes.rs  diff.rs  lib.rs  manifest.rs  utils.rs
apwm/src/index/: lock.rs  mod.rs  world.rs
apwm/taskcluster/: config.yml
apwm/tests/: common.rs  index_parsing.rs  version_resolution.rs
common/: Cargo.toml
common/src/: db.rs
community-ap-tools/: .gitignore  Cargo.toml  LICENSE  build.rs
community-ap-tools/migrations/2026-02-15-000000_initial/: down.sql  up.sql
community-ap-tools/migrations/2026-02-17-000000_store_usernames/: down.sql  up.sql
community-ap-tools/migrations/2026-02-17-000001_add_nok_status/: down.sql  up.sql
community-ap-tools/migrations/2026-02-27-000000_yaml_review_notes/: down.sql  up.sql
community-ap-tools/migrations/2026-02-28-000000_teams/: down.sql  up.sql
community-ap-tools/migrations/2026-02-28-000001_add_admin_role/: down.sql  up.sql
community-ap-tools/migrations/2026-02-28-000002_team_rooms_room_id_index/: down.sql  up.sql
community-ap-tools/migrations/2026-02-28-000003_team_rooms_room_name/: down.sql  up.sql
community-ap-tools/src/: auth.rs  datapackage.rs  error.rs  filters.rs  guards.rs  main.rs  schema.rs
community-ap-tools/src/review/: api.rs  builtin.rs  db.rs  mod.rs  page.rs  rules.rs  triggers.rs
community-ap-tools/static/: review-utils.js  review.css
community-ap-tools/taskcluster/: config.yml
community-ap-tools/templates/: admin_apx.html  admin_teams.html  base.html  deathlinks.html  index.html  preset_edit.html  presets.html  review.html  rooms.html
lobby/: Cargo.toml  build.rs  diesel.toml
lobby/migrations/2024-01-07-223045_initial/: down.sql
lobby/migrations/2024-02-18-005650_discord_auth/: down.sql  up.sql
lobby/migrations/2024-02-24-234226_indices/: up.sql
lobby/migrations/2024-02-25-150300_room_description/: down.sql
lobby/migrations/2024-03-05-140730_ap_room_link/: down.sql  up.sql
lobby/migrations/2024-04-18-145256_add_private_rooms/: down.sql  up.sql
lobby/migrations/2024-05-01-130730_add_allow_unsupported_game_setting/: down.sql  up.sql
lobby/migrations/2024-05-19-122140_add_yaml_rooms_id_index/: up.sql
lobby/migrations/2024-08-18-012338_add_max_yamls_per_person/: down.sql
lobby/migrations/2024-08-22-110306_add_max_yamls_bypass_list/: down.sql  up.sql
lobby/migrations/2024-08-27-192807_add_yaml_features/: down.sql  up.sql
lobby/migrations/2024-09-01-150136_room_delete_cascade_to_yaml/: down.sql  up.sql
lobby/migrations/2024-10-04-224627_room_add_manifest/: down.sql  up.sql
lobby/migrations/2024-11-16-122458_remove_private_rooms/: down.sql
lobby/migrations/2024-11-21-101943_add_room_templates/: down.sql
lobby/migrations/2024-11-27-092030_add_created_updated_at/: down.sql  up.sql
lobby/migrations/2024-11-27-101408_add_from_template/: down.sql
lobby/migrations/2024-11-29-173708_add_specific_tpl_name/: down.sql
lobby/migrations/2025-02-02-174548_add_yaml_verification_status/: down.sql  up.sql
lobby/migrations/2025-02-25-085030_redo_yaml_validation_settings/: up.sql
lobby/migrations/2025-03-09-145240_add_gen_to_rooms/: up.sql
lobby/migrations/2025-07-04-205607_rename_bucket_id/: down.sql  up.sql
lobby/migrations/2025-07-06-141630_add_bundle_setting_to_room/: down.sql  up.sql
lobby/migrations/2025-07-28-171959_add_indices_room_times/: down.sql  up.sql
lobby/migrations/2025-10-31-151646_add_password_column_to_slot/: down.sql  up.sql
lobby/migrations/2025-11-04-172713_add_room_info_table/: down.sql  up.sql
lobby/migrations/2026-02-19-000000_add_yaml_edit_tracking/: down.sql  up.sql
lobby/migrations/2026-02-20-000000_add_room_locked/: down.sql  up.sql
lobby/src/: config.rs  error.rs  generation.rs  index_manager.rs  instrumentation.rs  jobs.rs  lib.rs  main.rs  otlp.rs  schema.rs  session.rs  utils.rs  yaml.rs
lobby/src/db/: gen.rs  instrumentation.rs  mod.rs  room.rs  room_info.rs  room_template.rs  types.rs  user.rs  yaml.rs
lobby/src/extractor/: dlcq.rs  ffxiv.rs  jd.rs  kh.rs  mod.rs  pokemon.rs  sml2.rs  smw.rs  sv.rs  tunic.rs
lobby/src/views/: api.rs  apworlds.rs  auth.rs  filters.rs  gen.rs  manifest_editor.rs  mod.rs  options_gen.rs  queues.rs  room_manager.rs  room_settings.rs  room_templates.rs
lobby/static/css/: base.css  base.css.map  help.css  help.css.map
lobby/static/js/: menu.js  room.js  simplesearch.js  span_title.js  time.js  viewer.js
lobby/static/sass/: base.sass  help.sass
lobby/templates/: apworlds.html  base.html  index.html  options.html  room.html  room_gen.html
lobby/templates/apworld/: main.html
lobby/templates/index/: _base.html  help.html  main.html
lobby/templates/room/: _base.html  apworlds.html  edit.html  gen.html  (+1 more)
wq/: Cargo.toml
wq/src/: builder.rs  claim.rs  lib.rs  result.rs  rocket_routes.rs  stats.rs
wq/taskcluster/: config.yml
wq/tests/: cancel.rs  deadline.rs  queue.rs  reclaim.rs  resolve.rs  stats.rs  types.rs  wait.rs
(+177 files in other folders)
