[workspace]
resolver = "2"
members = [
    "lobby",
    "apwm",
]

[patch.crates-io]
rocket = { git = "https://github.com/Eijebong/Rocket.git", branch = "0.6.0-dev" }
rocket_ws = { git = "https://github.com/Eijebong/Rocket.git", branch = "0.6.0-dev" }
rocket_prometheus = { git = "https://github.com/Eijebong/rocket_prometheus.git", branch = "0.6.0-dev" }
rocket_oauth2 = { git = "https://github.com/jebrosen/rocket_oauth2.git" }
sentry-tracing = { git = "http://github.com/Eijebong/sentry-rust" }
sentry = { git = "http://github.com/Eijebong/sentry-rust" }

#[patch."https://github.com/Eijebong/wq.git"]
#wq = { path = "../wq" }

[profile.dev.package."*"]
opt-level = 3
