[workspace]
resolver = "2"
members = [
    "common",
    "lobby",
    "apwm",
    "wq",
    "apdiff-viewer",
    "community-ap-tools",
]

[patch.crates-io]
figment = { git = "https://github.com/Eijebong/Figment.git" }
rocket = { git = "https://github.com/Eijebong/Rocket.git", branch = "0.6.0-dev" }
rocket_ws = { git = "https://github.com/Eijebong/Rocket.git", branch = "0.6.0-dev" }
rocket_prometheus = { git = "https://github.com/Eijebong/rocket_prometheus.git", branch = "0.6.0-dev" }
rocket_oauth2 = { git = "https://github.com/Eijebong/rocket_oauth2.git" }
sentry-tracing = { git = "http://github.com/Eijebong/sentry-rust.git" }
sentry = { git = "http://github.com/Eijebong/sentry-rust.git" }
serde-saphyr = { git = "https://github.com/Eijebong/serde-saphyr.git", branch="fix-numeric-map-keys" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

[profile.release]
debug = true
