[package]
name = "apdiff-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
apwm = { path = "../apwm" }
anyhow = "1.0.88"
askama = { version = "0.14" }
askama_web = { version = "0.14", features = ["rocket-0.5"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.7", features = ["gzip", "json"] }
rocket = { version = "0.5.1", features = ["json"] }
rust-embed = { version = "8.5.0", features = ["rocket"] }
taskcluster = "86"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
serde_path_to_error = "0.1.16"
serde_json = "1.0.128"
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }

#[patch."https://github.com/Eijebong/APWM.git"]
#apwm = { path = "../apwm" }
