[package]
name = "apdiff-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
apwm = { path = "../apwm" }
common = { path = "../common" }
anyhow = "1.0.88"
askama = { version = "0.14" }
askama_web = { version = "0.14", features = ["rocket-0.5"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.2", features = ["chrono"] }
diesel-async = { version = "0.6", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.7", features = ["gzip", "json"] }
rocket = { version = "0.5.1", features = ["json"] }
rust-embed = { version = "8.5.0", features = ["rocket"] }
taskcluster = "88.0.5"
serde_path_to_error = "0.1.16"
serde_json = "1.0.128"
serde = { version = "1.0.217", features = ["derive"] }
syntect = { version = "5.2", default-features = false, features = ["default", "html"] }
html-escape = "0.2.13"
similar = "2.2"
strsim = "0.11"
futures = "0.3"

