[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
deadpool = "0.12.1"
diesel = { version = "2.2.2", features = ["uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.6", features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
futures-util = "0.3.30"
once_cell = "1.19.0"
prometheus = { version = "0.14.0", default-features = false }
rustls = "0.23.12"
rustls-pki-types = "1.8.0"
tokio = { version = "1.39.2", features = ["sync"] }
tokio-postgres = "0.7.11"
tokio-postgres-rustls = "0.13.0"
tracing = "0.1.40"
