[package]
name = "community-ap-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
askama = "0.14.0"
askama_web = { version = "0.14.0", features = ["rocket-0.5"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
htmlize = { version = "1.0.5", features = ["unescape"] }
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_oauth2 = "0.5.0"
rust-embed = { version = "8.6.0", features = ["rocket"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
tungstenite = { version = "0.26.2", features = ["native-tls"] }
uuid = { version = "1.16.0", features = ["serde"] }
aprs = { git = "https://github.com/panicbit/aprs.git" }
itertools = "0.14.0"
humantime = "2.2.0"
