[package]
name = "community-ap-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
askama = "0.15.0"
askama_web = { version = "0.15.0", features = ["rocket-0.5"] }
chrono = { version = "0.4.40", features = ["serde"] }
common = { path = "../common" }
diesel = { version = "2.3.5", features = ["uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
futures = "0.3"
htmlize = { version = "1.0.5", features = ["unescape"] }
regex = "1"
reqwest = { version = "0.13", features = ["form", "json", "multipart"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_oauth2 = "0.5.0"
rust-embed = { version = "8.6.0", features = ["rocket"] }
saphyr = "0.0.6"
scraper = "0.24"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
tungstenite = { version = "0.28", features = ["native-tls"] }
uuid = { version = "1.16.0", features = ["serde"] }
itertools = "0.14.0"
humantime = "2.2.0"
indexmap = { version = "2.11.0", features = ["serde"] }
