[package]
name = "ap-lobby"
version = "0.1.0"
edition = "2021"
default-run = "ap-lobby"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apwm = { path = "../apwm", default-features = false }
anyhow = "1.0.86"
askama = "0.14"
askama_web = { version = "0.14", features = ["rocket-0.5"] }
base64 = "0.22"
chrono = "0.4.38"
diesel = { version = "2.2.2", features = ["uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
http = "1.1.0"
once_cell = "1.19.0"
itertools = "0.14.0"
prometheus = { version = "0.14.0", default-features = false }
reqwest = { version = "0.12", features = ["multipart", "json"] }
rocket = { version = "0.5.1", features = ["uuid", "secrets", "json"] }
rocket_oauth2 = "0.5.0"
rocket_prometheus = "0.10.1"
rustls = "0.23.12"
tokio-postgres = "0.7.11"
rust-embed = { version = "8.5.0", features = ["rocket"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio-postgres-rustls = "0.13.0"
serde_yaml = "0.9.34"
uuid = { version = "1.10.0", features = ["v4"] }
yaml-split = "0.4.0"
zip = "2.1.6"
semver = "1.0.23"
git2 = "0.20.0"
log = "0.4.22"
tokio = { version = "1.39.2", features = ["sync"] }
deadpool = "0.12.1"
futures-util = "0.3.30"
rustls-pki-types = "1.8.0"
tracing = "0.1.40"
opentelemetry = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "tokio"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "tonic"] }
tracing-opentelemetry = "0.30.0"
tracing-subscriber = "0.3.19"
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
counter = "0.6.0"
comrak = { version = "0.37", default-features = false }
wq = { git = "https://github.com/Eijebong/wq.git" }
sentry = "0.38.1"
sentry-tracing = "0.38.1"
regex = "1.11.1"
rocket_ws = "=0.1.0"
deadpool-redis = "0.20.0"
redis = "0.29.1"

[build-dependencies]
anyhow = "1.0.86"
sha2 = "0.10.8"
walkdir = "2.5.0"
git2 = "0.20"

