[package]
name = "wq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
chrono = { version = "0.4.39", features = ["serde"] }
tracing = "0.1"
redis = { version = "0.27.6", features = ["tokio-comp"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "v7"] }
